@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -24,24 +24,45 @@
  */
 package org.graalvm.component.installer;
 
+import static org.graalvm.component.installer.CommonConstants.ARCH_AARCH64;
+import static org.graalvm.component.installer.CommonConstants.ARCH_AMD64;
+import static org.graalvm.component.installer.CommonConstants.ARCH_X8664;
+import static org.graalvm.component.installer.CommonConstants.CAP_OS_NAME;
+import static org.graalvm.component.installer.CommonConstants.OS_MACOS_DARWIN;
+import static org.graalvm.component.installer.CommonConstants.OS_TOKEN_LINUX;
+import static org.graalvm.component.installer.CommonConstants.OS_TOKEN_MAC;
+import static org.graalvm.component.installer.CommonConstants.OS_TOKEN_MACOS;
+import static org.graalvm.component.installer.CommonConstants.OS_TOKEN_WINDOWS;
+import static org.graalvm.component.installer.CommonConstants.SYSPROP_ARCH_NAME;
+import static org.graalvm.component.installer.CommonConstants.SYSPROP_JAVA_VERSION;
+import static org.graalvm.component.installer.CommonConstants.SYSPROP_OS_NAME;
+import static java.nio.charset.StandardCharsets.UTF_8;
 import java.io.File;
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.net.MalformedURLException;
+import java.net.URL;
 import java.net.URLDecoder;
+import java.nio.ByteBuffer;
+import java.nio.channels.FileChannel;
+import java.nio.channels.SeekableByteChannel;
 import java.nio.file.FileVisitResult;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.SimpleFileVisitor;
 import java.nio.file.StandardCopyOption;
+import java.nio.file.StandardOpenOption;
 import java.nio.file.attribute.AclFileAttributeView;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.nio.file.attribute.PosixFileAttributeView;
+import java.security.MessageDigest;
+import java.security.NoSuchAlgorithmException;
 import java.util.Map;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import org.graalvm.component.installer.model.ComponentRegistry;
+import java.net.URLEncoder;
+import java.util.Collection;
 import java.util.Locale;
 
 /**
@@ -66,30 +87,101 @@ public class SystemUtils {
     private static final String SPLIT_DELIMITER = Pattern.quote(DELIMITER);
 
     public enum OS {
-        WINDOWS,
-        LINUX,
-        MAC,
-        UNKNOWN;
+        WINDOWS(OS_TOKEN_WINDOWS),
+        LINUX(OS_TOKEN_LINUX),
+        MAC(OS_TOKEN_MACOS),
+        UNKNOWN(null);
+
+        private final String name;
+
+        public String getName() {
+            return name;
+        }
+
+        OS(String name) {
+            this.name = name;
+        }
+
+        public static String sysName() {
+            return System.getProperty(SYSPROP_OS_NAME);
+        }
 
         /**
-         * Obtain OS enum.
+         * Obtains current OS enum.
+         *
+         * @return OS enum identifier
          */
         public static OS get() {
-            String osName = System.getProperty("os.name");
-            if (!(osName == null || osName.isEmpty())) {
-                String osNameLower = osName.toLowerCase(Locale.ENGLISH);
-                if (osNameLower.contains("windows")) {
+            return fromName(sysName());
+        }
+
+        public static OS fromName(String osName) {
+            return osName == null ? UNKNOWN : fromNameLower(osName.toLowerCase(Locale.ENGLISH));
+        }
+
+        private static OS fromNameLower(String osNameLower) {
+            if (!osNameLower.isBlank()) {
+                if (osNameLower.contains(OS_TOKEN_WINDOWS)) {
                     return WINDOWS;
                 }
-                if (osNameLower.contains("linux")) {
+                if (osNameLower.contains(OS_TOKEN_LINUX)) {
                     return LINUX;
                 }
-                if (osNameLower.contains("mac") || osNameLower.contains("darwin")) {
+                if (osNameLower.contains(OS_TOKEN_MAC) || osNameLower.contains(OS_MACOS_DARWIN)) {
                     return MAC;
                 }
             }
             return UNKNOWN;
         }
+    }
+
+    public enum ARCH {
+        AMD64(ARCH_AMD64),
+        AARCH64(ARCH_AARCH64),
+        UNKNOWN(null);
+
+        private final String name;
+
+        public String getName() {
+            return name;
+        }
+
+        ARCH(String name) {
+            this.name = name;
+        }
+
+        public static String sysName() {
+            return System.getProperty(SYSPROP_ARCH_NAME);
+        }
+
+        /**
+         * Obtain current ARCH enum.
+         *
+         * @return ARCH enum identifier
+         */
+        public static ARCH get() {
+            return fromName(sysName());
+        }
+
+        public static ARCH fromName(String archName) {
+            return archName == null ? UNKNOWN : fromNameLower(archName.toLowerCase(Locale.ENGLISH));
+        }
+
+        private static ARCH fromNameLower(String archNameLower) {
+            if (!archNameLower.isBlank()) {
+                if (archNameLower.contains(ARCH_AARCH64)) {
+                    return AARCH64;
+                }
+                if (archNameLower.contains(ARCH_AMD64) || archNameLower.contains(ARCH_X8664)) {
+                    return AMD64;
+                }
+            }
+            return UNKNOWN;
+        }
+    }
+
+    public static boolean nonBlankString(String string) {
+        return string != null && !string.isBlank();
     }
 
     /**
@@ -170,8 +262,7 @@ public class SystemUtils {
      * @return true, if on Windows.
      */
     public static boolean isWindows() {
-        String osName = System.getProperty("os.name"); // NOI18N
-        return osName != null && osName.toLowerCase(Locale.ENGLISH).contains("windows");
+        return OS.get().equals(OS.WINDOWS);
     }
 
     /**
@@ -180,8 +271,7 @@ public class SystemUtils {
      * @return true, if on Linux.
      */
     public static boolean isLinux() {
-        String osName = System.getProperty("os.name"); // NOI18N
-        return osName != null && osName.toLowerCase(Locale.ENGLISH).contains("linux");
+        return OS.get().equals(OS.LINUX);
     }
 
     /**
@@ -190,8 +280,7 @@ public class SystemUtils {
      * @return true, if on Mac.
      */
     public static boolean isMac() {
-        String osName = System.getProperty("os.name"); // NOI18N
-        return osName != null && osName.toLowerCase(Locale.ENGLISH).contains("mac");
+        return OS.get().equals(OS.MAC);
     }
 
     /**
@@ -335,7 +424,7 @@ public class SystemUtils {
     }
 
     public static Path getGraalVMJDKRoot(ComponentRegistry reg) {
-        if ("macos".equals(reg.getGraalCapabilities().get(CommonConstants.CAP_OS_NAME))) {
+        if (OS.MAC.equals(OS.fromName(reg.getGraalCapabilities().get(CAP_OS_NAME)))) {
             return Paths.get("Contents", "Home");
         } else {
             return Paths.get("");
@@ -367,7 +456,7 @@ public class SystemUtils {
         return licenseTracking;
     }
 
-    public static String parseURLParameters(String s, Map<String, String> params) throws MalformedURLException {
+    public static String parseURLParameters(String s, Map<String, String> params) {
         int q = s.indexOf('?'); // NOI18N
         if (q == -1) {
             return s;
@@ -378,18 +467,12 @@ public class SystemUtils {
             String n;
             String v;
 
-            try {
-                n = URLDecoder.decode(nameAndVal[0], "UTF-8"); // NOI18N
-                if (n.isEmpty()) {
-                    continue;
-                }
-                v = nameAndVal.length > 1 ? URLDecoder.decode(nameAndVal[1], "UTF-8") : ""; // NOI18N
-                params.put(n, v);
-            } catch (UnsupportedEncodingException ex) {
-                MalformedURLException newEx = new MalformedURLException(ex.getLocalizedMessage());
-                newEx.initCause(ex);
-                throw newEx;
+            n = URLDecoder.decode(nameAndVal[0], UTF_8);
+            if (n.isEmpty()) {
+                continue;
             }
+            v = nameAndVal.length > 1 ? URLDecoder.decode(nameAndVal[1], UTF_8) : "";
+            params.put(n, v);
         }
         return s.substring(0, q);
     }
@@ -397,8 +480,8 @@ public class SystemUtils {
     public static int getJavaMajorVersion(CommandInput cmd) {
         String v = cmd.getLocalRegistry() != null ? cmd.getLocalRegistry().getJavaVersion() : null;
         if (v == null) {
-            cmd.getParameter(CommonConstants.SYSPROP_JAVA_VERSION, true);
-        } // NOI18N
+            cmd.getParameter(SYSPROP_JAVA_VERSION, true);
+        }
         if (v != null) {
             return interpretJavaMajorVersion(v);
         } else {
@@ -406,9 +489,30 @@ public class SystemUtils {
         }
     }
 
+    public static String buildUrlStringWithParameters(String baseURL, Map<String, ? extends Collection<String>> params) {
+        if (params == null || params.isEmpty()) {
+            return baseURL;
+        }
+        StringBuilder url = new StringBuilder(baseURL);
+        url.append('?');
+        for (Map.Entry<String, ? extends Collection<String>> entry : params.entrySet()) {
+            Collection<String> vals = entry.getValue();
+            String key = entry.getKey();
+            if (key == null || key.isBlank() || vals == null || vals.isEmpty()) {
+                continue;
+            }
+            for (String val : vals) {
+                url.append(URLEncoder.encode(entry.getKey(), UTF_8));
+                url.append('=');
+                url.append(URLEncoder.encode(val, UTF_8));
+                url.append('&');
+            }
+        }
+        return url.substring(0, url.length() - 1);
+    }
+
     public static int getJavaMajorVersion() {
-        String v = System.getProperty(CommonConstants.SYSPROP_JAVA_VERSION); // NOI18N
-        return interpretJavaMajorVersion(v);
+        return interpretJavaMajorVersion(System.getProperty(SYSPROP_JAVA_VERSION));
     }
 
     /**
@@ -418,15 +522,9 @@ public class SystemUtils {
      * @return the major version number, or zero if unknown
      */
     public static int interpretJavaMajorVersion(String v) {
-        String s;
-        if (v.startsWith("1.")) { // NOI18N
-            s = v.substring(2);
-        } else {
-            s = v;
-        }
         try {
-            return Integer.parseInt(s);
-        } catch (NumberFormatException ex) {
+            return Integer.parseInt(v.startsWith("1.") ? v.substring(2) : v); // NOI18N
+        } catch (NumberFormatException | NullPointerException ex) {
             return 0;
         }
     }
@@ -444,12 +542,11 @@ public class SystemUtils {
         Path base = getRuntimeBaseDir(graalPath);
         switch (OS.get()) {
             case LINUX:
-                String arch = System.getProperty("os.arch"); // NOI18N
                 Path temp = base.resolve(Paths.get("lib")); // NOI18N
                 if (!archDir || SystemUtils.getJavaMajorVersion() >= 10) {
                     newLibPath = temp;
                 } else {
-                    newLibPath = temp.resolve(Paths.get(arch));
+                    newLibPath = temp.resolve(Paths.get(OS.sysName()));
                 }
                 break;
             case MAC:
@@ -575,14 +672,75 @@ public class SystemUtils {
      * @return Strign representation.
      */
     public static String fingerPrint(byte[] digest) {
+        return fingerPrint(digest, true);
+    }
+
+    /**
+     * Formats a digest into a String representation. Prints digest bytes in hex, separates bytes by
+     * doublecolon.
+     * 
+     * @param digest digest bytes
+     * @param delimiter if true, put ':' between each two hex digits
+     * @return Strign representation.
+     */
+    public static String fingerPrint(byte[] digest, boolean delimiter) {
+        if (digest == null) {
+            return null;
+        }
         StringBuilder sb = new StringBuilder(digest.length * 3);
         for (int i = 0; i < digest.length; i++) {
-            if (i > 0) {
+            if (delimiter && i > 0) {
                 sb.append(':');
             }
             sb.append(String.format("%02x", (digest[i] & 0xff)));
         }
         return sb.toString();
+    }
+
+    /**
+     * Hashes a string contents.
+     * 
+     * @param s the input text
+     * @param delimiters use : delimiters in the fingerprint
+     * @return hex fingerprint of the input text
+     */
+    public static String digestString(String s, boolean delimiters) {
+        try {
+            MessageDigest dg = MessageDigest.getInstance("SHA-256"); // NOI18N
+            dg.update(s.getBytes());
+            byte[] digest = dg.digest();
+            return SystemUtils.fingerPrint(digest, delimiters);
+        } catch (NoSuchAlgorithmException ex) {
+            throw new FailedOperationException(ex.getLocalizedMessage(), ex);
+        }
+    }
+
+    public static String patternOsName(String os) {
+        if (os == null) {
+            return null;
+        }
+        String lc = os.toLowerCase(Locale.ENGLISH);
+        switch (lc) {
+            case OS_MACOS_DARWIN:
+            case OS_TOKEN_MACOS:
+                return "(:?" + OS_MACOS_DARWIN + "|" + OS_TOKEN_MACOS + ")";
+            default:
+                return lc;
+        }
+    }
+
+    public static String patternOsArch(String arch) {
+        if (arch == null) {
+            return null;
+        }
+        String lc = arch.toLowerCase(Locale.ENGLISH);
+        switch (lc) {
+            case ARCH_AMD64:
+            case ARCH_X8664:
+                return "(:?" + ARCH_AMD64 + "|" + ARCH_X8664 + ")";
+            default:
+                return lc;
+        }
     }
 
     /**
@@ -597,10 +755,10 @@ public class SystemUtils {
             return null;
         }
         switch (arch.toLowerCase(Locale.ENGLISH)) {
-            case CommonConstants.ARCH_X8664:
-                return CommonConstants.ARCH_AMD64;
+            case ARCH_X8664:
+                return ARCH_AMD64;
             default:
-                return arch;
+                return arch.toLowerCase(Locale.ENGLISH);
         }
     }
 
@@ -616,10 +774,68 @@ public class SystemUtils {
             return null;
         }
         switch (os.toLowerCase(Locale.ENGLISH)) {
-            case CommonConstants.OS_MACOS_DARWIN:
-                return CommonConstants.OS_TOKEN_MACOS;
+            case OS_MACOS_DARWIN:
+                return OS_TOKEN_MACOS;
             default:
-                return os;
+                return os.toLowerCase(Locale.ENGLISH);
         }
+    }
+
+    /**
+     * Computes file digest. The default algorithm is SHA-256
+     * 
+     * @param localFile local file path
+     * @param digestAlgo the hash algorithm
+     * @return digest bytes
+     * @throws java.io.IOException in the case of I/O failure, or a digest failure/not found
+     */
+    public static byte[] computeFileDigest(Path localFile, String digestAlgo) throws IOException {
+        try (SeekableByteChannel s = FileChannel.open(localFile, StandardOpenOption.READ)) {
+            ByteBuffer bb = ByteBuffer.allocate(4096);
+            long size = Files.size(localFile);
+            MessageDigest dg = MessageDigest.getInstance("SHA-256"); // NOI18N
+            while (size > 0) {
+                if (bb.limit() > size) {
+                    bb.limit((int) size);
+                }
+                int r = s.read(bb);
+                if (r < 0) {
+                    break;
+                }
+                bb.flip();
+                dg.update(bb);
+                bb.clear();
+                size -= r;
+            }
+            return dg.digest();
+        } catch (NoSuchAlgorithmException ex) {
+            throw new IOException(ex);
+        }
+    }
+
+    /**
+     * Determines if the path is a remote URL. If the passed string is not an absolute URL, attempts
+     * to interpret as relative path, which checks 'bad characters' and avoids paths that traverse
+     * above the root. Disallows absolute file:// URLs, URLs from file-based catalogs must be given
+     * as relative.
+     * 
+     * @param pathOrURL path or URL to check.
+     * @return true, if the path is actually an URL.
+     */
+    public static boolean isRemotePath(String pathOrURL) {
+        try {
+            URL u = new URL(pathOrURL);
+            String proto = u.getProtocol();
+            if ("file".equals(proto)) { // NOI18N
+                throw new IllegalArgumentException("Absolute file:// URLs are not permitted.");
+            } else {
+                return true;
+            }
+        } catch (MalformedURLException ex) {
+            // expected
+        }
+        // will fail with an exception if the relative path contains bad chars or traverses up
+        fromCommonRelative(pathOrURL);
+        return false;
     }
 }
